--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "postcss": "^8.4.16",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "wrangler": "^4.54.0"
   }
 }
